--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,9 @@ section#service {
 
 .foto{
 }
+
+.tumb250px {
+    width:250px !important;
+    height:250px !important;
+    object-fit: cover;
+}
