--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,9 @@ section#service {
 	display: block;
 }
 
-.foto{
+.foto{ 
+    border-radius: 8px;
+    margin: 5px 5px 5px 5px;
 }
 
 .tumb250px {
