--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,31 @@ background-color: var(--hoofdkleur);
     display: inline-block;
     font-size: 16px;
 }
+.loginreg{
+	background-color: var(--hoofdkleur);
+	margin: 10px 10px;
+	float: center;
+    border: none;
+    border-radius: 08px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+.column {
+    float: left;
+}
+.left{
+    width: 25%;
+}
+.right{
+	width: 25%;	
+}
+.middle {
+    width: 50%;
+}
 .tumb250px {
     width:250px !important;
     height:250px !important;
