--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,10 @@ background-color: var(--hoofdkleur);
     object-fit: cover;
 }
 
+.contact #home h1{
+    padding: 2em;
+}
+
 .search-field .app-select {
     margin-top: 50px;
     margin-bottom: 0;
@@ -114,4 +118,8 @@ background-color: var(--hoofdkleur);
 
 .navbar-brand img {
     height: 30px;
+}
+
+footer {
+    clear: both;
 }
